--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,21 @@
     <artifactId>jni-jnlp-poc</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.github.adamheinrich</groupId>
+            <artifactId>native-utils</artifactId>
+            <version>8e35649</version>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
