--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.marcastr0.hello.Hello</mainClass>
+                                    <mainClass>com.marcastr0.temperature.Converter</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
@@ -50,7 +50,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>com.marcastr0.hello.Hello</mainClass>
+                            <mainClass>com.marcastr0.temperature.Converter</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
